--- a/notepad++/試試.html
+++ b/notepad++/試試.html
@@ -1,23 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Centered Bootstrap Container with Limited Width</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" rel="stylesheet">
-<style>
-  .custom-container {
-    max-width: 600px; /* Set the maximum width as needed */
-    margin: 0 auto; /* Center the container horizontally */
-    padding: 0 15px; /* Optional: Add padding to the container */
-  }
-</style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Submit Button Inside Input</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <style>
+        .rename {
+            position: relative;
+            cursor: pointer;
+        }
+		
+		.rename:hover::after {
+		content: "重新命名";
+		position: absolute;
+		top: -30px; /* Adjust this value to position the text */
+		left: 50%;
+		transform: translateX(-50%);
+		background-color: rgba(0, 0, 0, 0.7);
+		color: white;
+		padding: 5px;
+		border-radius: 5px;
+		white-space: nowrap;
+	}
+    </style>
 </head>
+
 <body>
-<div class="container custom-container">
-  <div class='container'>
-    <p class='all-notes' style='margin-top:0.3rem;'><a id='toAllNotes' href='#'>所有筆記板</a></p>
-  </div>
-</div>
+    <div class="input-group rename-container">
+        <input type="text" id="renameInput" style="display: none; width:150px;" placeholder='重新命名'>
+        <div class='input-group-append' style='display:none;'>
+            <button type="button" id="renameSubmit" class="btn btn-primary" style='padding: 0.1rem 0.2rem;'>確定</button>
+        </div>
+    </div>
+    <button type="button" class="btn btn-outline-secondary learning-area-course" style="padding: 0.1rem 0.2rem; margin: 0.2rem 0.2rem 0.2rem 1.5rem;">
+        <i class="bi bi-pen rename" style="font-size:0.8rem;"></i> 普通物理
+    </button>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            const $renameIcon = $('.rename');
+            const $renameInput = $('#renameInput');
+            const $submitButton = $('#renameSubmit');
+
+            $renameIcon.click(function () {
+                // Show input field
+                $renameInput.show().focus();
+                // Show submit button
+                $submitButton.parent().show();
+            });
+
+            $submitButton.click(function () {
+                // Handle submit action here
+                // Hide input field
+                $renameInput.hide();
+                // Clear user's input
+                $renameInput.val('');
+                // Hide submit button
+                $submitButton.parent().hide();
+            });
+
+            $renameInput.blur(function (event) {
+			if (event.relatedTarget === $submitButton[0]) {
+				return; // Skip the blur event if the submit button was clicked
+			}
+                    // Clear user's input
+                    $renameInput.val('');
+                    // Hide input field
+                    $renameInput.hide();
+                    // Hide submit button
+                    $submitButton.parent().hide();
+                })
+            });
+
+    </script>
 </body>
+
 </html>
