自定義筆記區: add, delete, rename

--- a/notepad++/試試.html
+++ b/notepad++/試試.html
@@ -1,23 +1,17 @@
-<tr class="to-period-panel-modal">
-	<th scope="row">1</th>
-	<td class="lecturer">人生導師</td>
-	<td class="course">跑跑卡丁車</td>
-	<td>
-		<div class="btn-group dropright">
-			<a href="#" class="dropdown-toggle video-id" data-toggle="dropdown" aria-expanded="false">BV15K42187vj</a>
-			<div class="dropdown-menu" style="">
-				<a href="#" class="dropdown-item copy-link">複製影片連結</a>
-				<a href="#" class="dropdown-item to-learning-area">前往學習區</a>
-			</div>
-		</div>
-	</td>
-</tr>
-
-
-<div class="btn-group dropright">
-	<a href='#' id='dropdownTitle' class='dropdown-toggle' data-toggle="dropdown" aria-expanded="false" style='color:black;'></a>
-	<div class="dropdown-menu" style="">
-		<a href="#" class="dropdown-item copy-link">複製影片連結</a>
-		<a href="#" class="dropdown-item to-learning-area">前往學習區</a>
+	<div class='col-sm-8 d-flex align-items-center' style='margin-left:2rem;'>
+		<i class="fa-solid fa-pen-to-square" style='margin-right: 0.3rem;'></i>
+		<a href='#' class='self-defined-panel mr-auto'>我是一個筆記板.txt</a>
+		<a href='#'>
+			<i class="bi bi-pen self-defined-panel-rename" style="font-size:0.8rem;"></i>
+			<i class="fa-solid fa-trash-can self-defined-panel-delete" style="font-size:0.8rem;"></i>
+		</a>
 	</div>
-</div>
+	
+	<div class='col-sm-8 d-flex' style='margin-left:2rem;'>
+		<i class="bi bi-folder" style='margin-right: 0.3rem;'></i>
+		<a href='#' class='self-defined-folder mr-auto'>我是一個資料夾</a>
+		<a href='#'>
+			<i class="bi bi-pen self-defined-folder-rename" style="margin-right:0.3rem; font-size:0.8rem;"></i>
+			<i class="fa-solid fa-trash-can self-defined-folder-delete" style="font-size:0.8rem;"></i>
+		</a>
+	</div>
