--- a/notepad++/試試.html
+++ b/notepad++/試試.html
@@ -15,3 +15,5 @@
 			<i class="fa-solid fa-trash-can self-defined-folder-delete" style="font-size:0.8rem;"></i>
 		</a>
 	</div>
+	
+	<div class="col-sm-8 d-flex" style="margin-left: 2rem; display: none;"><i class="bi bi-folder" style="margin-right: 0.3rem;"></i><a href="#" class="self-defined-folder mr-auto">是差不是插</a><a href="#"><i class="bi bi-pen self-defined-folder-rename" style="margin-right:0.3rem; font-size:0.8rem;"></i><i class="fa-solid fa-trash-can self-defined-folder-delete" style="font-size:0.8rem;"></i></a></div>
