自定義區完成, 新增: panel-element. 學習區播放清單初步

--- a/notepad++/試試.html
+++ b/notepad++/試試.html
@@ -7,13 +7,14 @@
 		</a>
 	</div>
 	
-	<div class='col-sm-8 d-flex' style='margin-left:2rem;'>
-		<i class="bi bi-folder" style='margin-right: 0.3rem;'></i>
-		<a href='#' class='self-defined-folder mr-auto'>我是一個資料夾</a>
-		<a href='#'>
-			<i class="bi bi-pen self-defined-folder-rename" style="margin-right:0.3rem; font-size:0.8rem;"></i>
-			<i class="fa-solid fa-trash-can self-defined-folder-delete" style="font-size:0.8rem;"></i>
-		</a>
-	</div>
 	
-	<div class="col-sm-8 d-flex" style="margin-left: 2rem; display: none;"><i class="bi bi-folder" style="margin-right: 0.3rem;"></i><a href="#" class="self-defined-folder mr-auto">是差不是插</a><a href="#"><i class="bi bi-pen self-defined-folder-rename" style="margin-right:0.3rem; font-size:0.8rem;"></i><i class="fa-solid fa-trash-can self-defined-folder-delete" style="font-size:0.8rem;"></i></a></div>
+<div class='row'>	
+	<div class="col-sm-6 d-flex align-items-center" style="margin-left:2rem;">
+		<i class="fa-solid fa-list" style="margin-right: 0.3rem;"></i>
+		<a href="#" class="playlist">我是播放清單</a>		
+	</div>
+	<div class="col-sm-6 d-flex align-items-center" style="margin-left:2rem;">
+		<i class="fa-solid fa-list" style="margin-right: 0.3rem;"></i>
+		<a href="#" class="playlist">我是播放清單2</a>		
+	</div>
+</div>
