--- a/notepad++/試試.html
+++ b/notepad++/試試.html
@@ -8,12 +8,8 @@
 	</div>
 	
 	
-<div class='row'>	
-	<div class="col-sm-6 d-flex align-items-center" style="margin-left:2rem;">
-		<i class="fa-solid fa-list" style="margin-right: 0.3rem;"></i>
-		<a href="#" class="playlist">我是播放清單</a>		
-	</div>
-	<div class="col-sm-6 d-flex align-items-center" style="margin-left:2rem;">
+<div class='row'>
+	<div class="col-sm-10 d-flex align-items-center">
 		<i class="fa-solid fa-list" style="margin-right: 0.3rem;"></i>
 		<a href="#" class="playlist">我是播放清單2</a>		
 	</div>
