每一張筆記板的外觀配置完成

--- a/notepad++/試試.html
+++ b/notepad++/試試.html
@@ -1,20 +1,22 @@
-	<div class='col-sm-8 d-flex align-items-center' style='margin-left:2rem;'>
-		<i class="fa-solid fa-pen-to-square" style='margin-right: 0.3rem;'></i>
-		<a href='#' class='self-defined-panel mr-auto'>我是一個筆記板.txt</a>
-		<a href='#'>
-			<i class="bi bi-pen self-defined-panel-rename" style="font-size:0.8rem;"></i>
-			<i class="fa-solid fa-trash-can self-defined-panel-delete" style="font-size:0.8rem;"></i>
-		</a>
-	</div>
-	
-	
-<div class='row'>	
-	<div class="col-sm-6 d-flex align-items-center" style="margin-left:2rem;">
-		<i class="fa-solid fa-list" style="margin-right: 0.3rem;"></i>
-		<a href="#" class="playlist">我是播放清單</a>		
-	</div>
-	<div class="col-sm-6 d-flex align-items-center" style="margin-left:2rem;">
-		<i class="fa-solid fa-list" style="margin-right: 0.3rem;"></i>
-		<a href="#" class="playlist">我是播放清單2</a>		
-	</div>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Your Page Title</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+</head>
+<body>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 d-flex">
+        <i class="fa-solid fa-pen-to-square"></i>
+        <a href="#" class="answer-file mr-auto" data-like="553" data-dislike="33">Jerry-20240115.txt</a>
+        <i class="fa-regular fa-thumbs-up like-btn"></i>
+        <span class="like-count">553</span>
+        <i class="fa-regular fa-thumbs-down dislike-btn"></i>
+        <span class="dislike-count">33</span>
+      </div>
+    </div>
+  </div>
+</body>
+</html>
