所有筆記板: 標籤生成, 學習區複製連結, 學習區前往學習區

--- a/notepad++/試試.html
+++ b/notepad++/試試.html
@@ -1,22 +1,23 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Your Page Title</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-</head>
-<body>
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-12 d-flex">
-        <i class="fa-solid fa-pen-to-square"></i>
-        <a href="#" class="answer-file mr-auto" data-like="553" data-dislike="33">Jerry-20240115.txt</a>
-        <i class="fa-regular fa-thumbs-up like-btn"></i>
-        <span class="like-count">553</span>
-        <i class="fa-regular fa-thumbs-down dislike-btn"></i>
-        <span class="dislike-count">33</span>
-      </div>
-    </div>
-  </div>
-</body>
-</html>
+<div class='each-video' lecturer='' course=''>
+	<div class="btn-group dropdown">
+		<a href='#' class='dropdown-toggle' data-toggle="dropdown" aria-expanded="false" style='color:black;'>
+			<strong class='video-id' style='font-size:2rem;'>影片id</strong>
+		</a>
+		<div class="dropdown-menu">
+			<a href="#" class="dropdown-item copy-link">複製影片連結</a>
+			<a href="#" class="dropdown-item to-learning-area">前往學習區</a>
+		</div>
+	</div>  
+	<div class='row'>
+		<div class='each-note-panel col-sm-3'>
+			<div class='display-data-box' style='margin-right:1rem;'>                       
+				<span class='description'>剖析一般項的係數數學結構3333</span>                       
+			</div>
+			<p class='period'>00:13:30~00:16:10</p>
+		</div>
+		<div class='each-note-panel col-sm-3'>
+			<div class='display-data-box' style='margin-right:1rem;'>                       
+				<span class='description'>剖析一般項的係數數學結構3333</span>                       
+			</div>
+			<p class='period'>00:13:30~00:16:10</p>
+		</div>
